[gd_scene load_steps=28 format=3 uid="uid://bujmpfdfcyus0"]

[ext_resource type="Texture2D" uid="uid://dl4bnipornjv1" path="res://assets/shader/texture/erase_texture_left.png" id="1"]
[ext_resource type="Theme" uid="uid://8v4be764xt8s" path="res://assets/base_theme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://cvac18y6xs3nb" path="res://assets/shader/texture/erase_texture_right.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cvjvyi142akoc" path="res://assets/ui/button/button_spritesheet.png" id="4"]
[ext_resource type="Script" path="res://src/screen/player_selector.gd" id="5"]
[ext_resource type="Shader" path="res://assets/shader/script/erase.gdshader" id="7"]
[ext_resource type="AudioStream" uid="uid://clb13nxm4p246" path="res://assets/sfx/click.wav" id="8"]

[sub_resource type="StyleBoxTexture" id="4"]
texture = ExtResource("4")
region_rect = Rect2(320, 0, 64, 64)

[sub_resource type="StyleBoxTexture" id="1"]
texture = ExtResource("4")
region_rect = Rect2(320, 64, 64, 64)

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("4")
region_rect = Rect2(320, 128, 64, 64)

[sub_resource type="StyleBoxTexture" id="3"]
texture = ExtResource("4")
region_rect = Rect2(320, 192, 64, 64)

[sub_resource type="ShaderMaterial" id="5"]
resource_local_to_scene = true
shader = ExtResource("7")
shader_parameter/progress = 0.0
shader_parameter/color = Color(1.5, 1.5, 1.5, 1)
shader_parameter/noise = ExtResource("1")

[sub_resource type="CompressedTexture2D" id="6"]

[sub_resource type="CompressedTexture2D" id="7"]

[sub_resource type="StyleBoxTexture" id="12"]
texture = ExtResource("4")
region_rect = Rect2(576, 0, 64, 64)

[sub_resource type="StyleBoxTexture" id="8"]
texture = ExtResource("4")
region_rect = Rect2(576, 64, 64, 64)

[sub_resource type="StyleBoxTexture" id="9"]
texture = ExtResource("4")
region_rect = Rect2(576, 128, 64, 64)

[sub_resource type="StyleBoxEmpty" id="11"]

[sub_resource type="StyleBoxEmpty" id="10"]

[sub_resource type="StyleBoxTexture" id="16"]
texture = ExtResource("4")
region_rect = Rect2(384, 0, 64, 64)

[sub_resource type="StyleBoxTexture" id="13"]
texture = ExtResource("4")
region_rect = Rect2(384, 64, 64, 64)

[sub_resource type="StyleBoxTexture" id="14"]
texture = ExtResource("4")
region_rect = Rect2(384, 128, 64, 64)

[sub_resource type="StyleBoxTexture" id="15"]
texture = ExtResource("4")
region_rect = Rect2(384, 192, 64, 64)

[sub_resource type="Animation" id="17"]
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"change_sprite"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.1, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:material:shader_param/noise")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1")]
}

[sub_resource type="Animation" id="18"]
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"change_sprite"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:material:shader_param/noise")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3")]
}

[sub_resource type="Animation" id="19"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 64, 64, 64), Rect2(64, 64, 64, 64), Rect2(128, 64, 64, 64), Rect2(192, 64, 64, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 64, 64, 64), Rect2(64, 64, 64, 64), Rect2(128, 64, 64, 64), Rect2(192, 64, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33hc1"]
_data = {
"change_left": SubResource("17"),
"change_right": SubResource("18"),
"player_anim": SubResource("19")
}

[node name="PlayerSelector" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -256.0
offset_right = 236.0
mouse_filter = 2
theme = ExtResource("2")
alignment = 1
script = ExtResource("5")

[node name="LeftButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.8)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("4")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/disabled = SubResource("3")
theme_override_styles/focus = SubResource("1")

[node name="VSeparator" type="VSeparator" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Sprites" type="Control" parent="."]
material = SubResource("5")
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
mouse_filter = 2

[node name="Body" type="Sprite2D" parent="Sprites"]
position = Vector2(128, 128)
scale = Vector2(4, 4)
texture = SubResource("6")
region_enabled = true
region_rect = Rect2(0, 64, 64, 64)

[node name="Head" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(128, 128)
scale = Vector2(4, 4)
texture = SubResource("7")
region_enabled = true
region_rect = Rect2(0, 64, 64, 64)

[node name="UnlockButton" type="Button" parent="Sprites"]
visible = false
modulate = Color(1, 1, 1, 0.8)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("12")
theme_override_styles/hover = SubResource("8")
theme_override_styles/pressed = SubResource("9")
theme_override_styles/disabled = SubResource("11")
theme_override_styles/focus = SubResource("10")
disabled = true

[node name="VSeparator2" type="VSeparator" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="RightButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.8)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("16")
theme_override_styles/hover = SubResource("13")
theme_override_styles/pressed = SubResource("14")
theme_override_styles/disabled = SubResource("15")
theme_override_styles/focus = SubResource("13")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_33hc1")
}
autoplay = "player_anim"

[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="Sprites/UnlockButton" to="." method="_on_UnlockButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
